--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
+    "fast-csv": "^2.5.0",
+    "fs": "0.0.1-security",
+    "json2csv": "^4.5.1",
     "oracledb": "^2.3.0",
+    "os": "^0.1.1",
+    "path": "^0.12.7",
+    "url": "^0.11.0",
     "validator": "^10.3.0"
   },
   "devDependencies": {
